[Email] fix manifest (#105)
* fix manifest

* change bool to boolean

--- a/skills/csharp/emailskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/emailskill/wwwroot/manifest/manifest-1.1.json
@@ -210,7 +210,10 @@
     "summaryResult": {
       "type": "object",
       "properties": {
-        "$ref": "#/definitions/actionResult",
+        "actionSuccess": {
+          "type": "boolean",
+          "description": "result of action"
+        },
         "emailList": {
           "type": "array",
           "description": "List of recent emails",
