--- a/skills/csharp/emailskill/wwwroot/manifest/manifest-1.0.json
+++ b/skills/csharp/emailskill/wwwroot/manifest/manifest-1.0.json
@@ -4,7 +4,7 @@
   "name": "Email Skill",
   "description": "The Email skill provides email related capabilities and supports Office and Google calendars.",
   "publisherName": "Microsoft",
-  "version": "0.8",
+  "version": "1.0",
   "iconUrl": "https://{YOUR_SKILL_URL}/images/EmailSkill.png",
   "copyright": "Copyright (c) Microsoft Corporation. All rights reserved.",
   "license": "",
@@ -133,7 +133,7 @@
       "type": "object",
       "properties": {
         "actionSuccess": {
-          "type": "bool",
+          "type": "boolean",
           "description": "result of action"
         }
       }
@@ -148,8 +148,8 @@
         "emailList": {
           "type": "array",
           "description": "List of recent emails",
-          "item": {
-            "type": "#/definitions/emailInfo"
+          "items": {
+            "$ref": "#/definitions/emailInfo"
           }
         }
       }
