--- a/skills/csharp/experimental/newsskill/wwwroot/manifest/manifest-1.1.json
+++ b/skills/csharp/experimental/newsskill/wwwroot/manifest/manifest-1.1.json
@@ -55,7 +55,7 @@
         "$ref": "#/definitions/trendingArticlesInput"
       },
       "resultValue": {
-        "$ref": "#/definitions/newsResult"
+        "$ref": "#/definitions/actionResult"
       }
     },
     "getFavoriteTopics": {
@@ -66,7 +66,7 @@
         "$ref": "#/definitions/favoriteTopicsInput"
       },
       "resultValue": {
-        "$ref": "#/definitions/newsResult"
+        "$ref": "#/definitions/actionResult"
       }
     },
     "findArticles": {
@@ -77,7 +77,7 @@
         "$ref": "#/definitions/findArticlesInput"
       },
       "resultValue": {
-        "$ref": "#/definitions/newsResult"
+        "$ref": "#/definitions/actionResult"
       }
     }
   },
@@ -121,7 +121,7 @@
         }
       }
     },
-    "newsResult": {
+    "actionResult": {
       "type": "object",
       "properties": {
         "newsList": {
