phone skill - align to skill template

--- a/skills/csharp/experimental/phoneskill/appsettings.json
+++ b/skills/csharp/experimental/phoneskill/appsettings.json
@@ -13,6 +13,7 @@
   },
   "microsoftAppId": "",
   "microsoftAppPassword": "",
+  "allowedCallers": [ "*" ],
   "appInsights": {
     "appId": "",
     "instrumentationKey": ""
