[H] update to latest
* acdfdda8b1223f602ed279d2b6227197e9105218
* only update async in main
* move AllowedCallersClaimsValidator to SkillServiceLibrary
* send WelcomeMessage in OnMembersAddedAsync as skill

--- a/skills/csharp/experimental/hospitalityskill/appsettings.json
+++ b/skills/csharp/experimental/hospitalityskill/appsettings.json
@@ -1,6 +1,7 @@
 {
   "microsoftAppId": "",
   "microsoftAppPassword": "",
+  "allowedCallers": [ "*" ],
   "oauthConnections": [],
   "ApplicationInsights": {
     "InstrumentationKey": ""
