--- a/skills/csharp/experimental/bingsearchskill/appsettings.json
+++ b/skills/csharp/experimental/bingsearchskill/appsettings.json
@@ -7,6 +7,7 @@
   ],
   "microsoftAppId": "",
   "microsoftAppPassword": "",
+  "allowedCallers": [ "*" ],
   "ApplicationInsights": {
     "InstrumentationKey": ""
   },
