--- a/skills/csharp/experimental/itsmskill/appsettings.json
+++ b/skills/csharp/experimental/itsmskill/appsettings.json
@@ -1,6 +1,7 @@
 {
   "microsoftAppId": "",
   "microsoftAppPassword": "",
+  "allowedCallers": [ "*" ],
   "oauthConnections": [
     {
       "provider": "Generic Oauth 2",
