--- a/skills/csharp/experimental/newsskill/appsettings.json
+++ b/skills/csharp/experimental/newsskill/appsettings.json
@@ -1,6 +1,7 @@
 {
   "microsoftAppId": "",
   "microsoftAppPassword": "",
+  "allowedCallers": [ "*" ],
   "oauthConnections": [],
   "ApplicationInsights": {
     "InstrumentationKey": ""
