event skill - skill template

--- a/skills/csharp/experimental/eventskill/appsettings.json
+++ b/skills/csharp/experimental/eventskill/appsettings.json
@@ -1,6 +1,7 @@
 {
   "microsoftAppId": "",
   "microsoftAppPassword": "",
+  "allowedCallers": [ "*" ],
   "oauthConnections": [],
   "ApplicationInsights": {
     "InstrumentationKey": ""
@@ -16,5 +17,5 @@
     "databaseId": "botstate-db"
   },
   "properties": {},
-  "eventbriteKey":  ""
+  "eventbriteKey": ""
 }
