--- a/skills/csharp/experimental/musicskill/appsettings.json
+++ b/skills/csharp/experimental/musicskill/appsettings.json
@@ -3,6 +3,7 @@
   "properties": {},
   "microsoftAppId": "",
   "microsoftAppPassword": "",
+  "allowedCallers": [ "*" ],
   "botWebAppName": "",
   "luis": {
     "accountName": "",
