[POI] update to latest
* acdfdda8b1223f602ed279d2b6227197e9105218
* send WelcomeMessage in OnMembersAddedAsync as skill

--- a/skills/csharp/pointofinterestskill/appsettings.json
+++ b/skills/csharp/pointofinterestskill/appsettings.json
@@ -1,7 +1,7 @@
 {
   "microsoftAppId": "",
   "microsoftAppPassword": "",
-  "botWebAppName": "",
+  "allowedCallers": [ "*" ],
   "oauthConnections": [],
   "applicationInsights": {
     "InstrumentationKey": ""
@@ -16,10 +16,7 @@
     "containerId": "botstate-collection",
     "databaseId": "botstate-db"
   },
-  "luis": {
-    "accountName": "",
-    "key": ""
-  },
+  "properties": {},
   "azureMapsKey": "",
   "foursquareClientId": "",
   "foursquareClientSecret": "",
