--- a/skills/csharp/emailskill/appsettings.json
+++ b/skills/csharp/emailskill/appsettings.json
@@ -1,6 +1,7 @@
 {
   "microsoftAppId": "",
   "microsoftAppPassword": "",
+  "allowedCallers": [ "*" ],
   "oauthConnections": [
     {
       "name": "",
