--- a/skills/csharp/calendarskill/appsettings.json
+++ b/skills/csharp/calendarskill/appsettings.json
@@ -1,6 +1,7 @@
 {
   "microsoftAppId": "",
   "microsoftAppPassword": "",
+  "allowedCallers": [ "*" ],
   "botWebAppName": "",
   "oauthConnections": [
     {
@@ -21,14 +22,11 @@
     "cosmosDBEndpoint": "",
     "authKey": ""
   },
+  "properties": {},
   "azureSearch": {
     "searchServiceName": "",
     "searchServiceAdminApiKey": "",
     "searchIndexName": ""
-  },
-  "luis": {
-    "accountName": "",
-    "key": ""
   },
   "googleAppName": "",
   "googleClientId": "",
@@ -75,6 +73,5 @@
       }
     ]
   },
-  "azureMapsKey": "",
-  "bingSpellCheckSubscriptionKey": ""
+  "azureMapsKey": ""
 }
