[music] align template and add test (#144)
* add music test

* align template

* fix

* fix comments

* fix issues

Co-authored-by: Huanran Xu <huanx@microsoft.com>

--- a/skills/csharp/experimental/musicskill/appsettings.json
+++ b/skills/csharp/experimental/musicskill/appsettings.json
@@ -3,12 +3,8 @@
   "properties": {},
   "microsoftAppId": "",
   "microsoftAppPassword": "",
+  "allowedCallers": [ "*" ],
   "botWebAppName": "",
-  "luis": {
-    "accountName": "",
-    "key": "",
-    "region": ""
-  },
   "cosmosDb": {
     "authKey": "",
     "containerId": "botstate-collection",
