[automotive] align to skill template (#141)
* add auth and provider

* change names

* fix name

* fix

* fix comments

* fix

Co-authored-by: Huanran Xu <huanx@microsoft.com>

--- a/skills/csharp/experimental/automotiveskill/appsettings.json
+++ b/skills/csharp/experimental/automotiveskill/appsettings.json
@@ -1,6 +1,8 @@
 {
   "microsoftAppId": "",
   "microsoftAppPassword": "",
+  "properties": {},
+  "allowedCallers": [ "*" ],
   "oauthConnections": [],
   "ApplicationInsights": {
     "InstrumentationKey": ""
