add oauth credentials for aad skills

--- a/skills/csharp/emailskill/appsettings.json
+++ b/skills/csharp/emailskill/appsettings.json
@@ -7,6 +7,10 @@
       "provider": "Azure Active Directory v2"
     }
   ],
+  "oauthCredentials": {
+    "microsoftAppId": "",
+    "microsoftAppPassword": ""
+  },
   "ApplicationInsights": {
     "InstrumentationKey": ""
   },
