--- a/skills/csharp/emailskill/EmailSkill.csproj
+++ b/skills/csharp/emailskill/EmailSkill.csproj
@@ -24,7 +24,7 @@
     <PackageReference Include="Microsoft.Bot.Configuration" Version="4.8.1" />
     <PackageReference Include="Microsoft.Bot.Connector" Version="4.8.1" />
     <PackageReference Include="Microsoft.Bot.Schema" Version="4.8.1" />
-    <PackageReference Include="Microsoft.Bot.Solutions" Version="0.9.0-daily252" />
+    <PackageReference Include="Microsoft.Bot.Solutions" Version="1.0.0" />
     <PackageReference Include="Microsoft.Graph" Version="1.15.0" />
     <PackageReference Include="MimeKit" Version="2.2.0" />
   </ItemGroup>
