--- a/skills/csharp/experimental/automotiveskill/AutomotiveSkill.csproj
+++ b/skills/csharp/experimental/automotiveskill/AutomotiveSkill.csproj
@@ -29,7 +29,7 @@
     <PackageReference Include="Microsoft.Bot.Configuration" Version="4.8.1" />
     <PackageReference Include="Microsoft.Bot.Connector" Version="4.8.1" />
     <PackageReference Include="Microsoft.Bot.Schema" Version="4.8.1" />
-    <PackageReference Include="Microsoft.Bot.Solutions" Version="0.9.0-daily252" />
+    <PackageReference Include="Microsoft.Bot.Solutions" Version="1.0.0" />
     <PackageReference Include="Microsoft.Graph" Version="1.15.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="SharpYaml" Version="1.6.5" />
