--- a/skills/csharp/experimental/eventskill/EventSkill.csproj
+++ b/skills/csharp/experimental/eventskill/EventSkill.csproj
@@ -29,7 +29,7 @@
     <PackageReference Include="Microsoft.Bot.Builder.Integration.ApplicationInsights.Core" Version="4.8.1" />
     <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.8.1" />
     <PackageReference Include="Microsoft.Bot.Builder.TemplateManager" Version="4.8.1" />
-    <PackageReference Include="Microsoft.Bot.Solutions" Version="0.9.0-daily252" />
+    <PackageReference Include="Microsoft.Bot.Solutions" Version="1.0.0" />
     <PackageReference Include="Microsoft.Bot.Configuration" Version="4.8.1" />
     <PackageReference Include="Microsoft.Bot.Connector" Version="4.8.1" />
     <PackageReference Include="Microsoft.Bot.Schema" Version="4.8.1" />
