--- a/skills/csharp/experimental/restaurantbookingskill/RestaurantBookingSkill.csproj
+++ b/skills/csharp/experimental/restaurantbookingskill/RestaurantBookingSkill.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.8.1" />
     <PackageReference Include="Microsoft.Bot.Builder.Integration.ApplicationInsights.Core" Version="4.8.1" />
     <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.8.1" />
-    <PackageReference Include="Microsoft.Bot.Solutions" Version="0.9.0-daily252" />
+    <PackageReference Include="Microsoft.Bot.Solutions" Version="1.0.0" />
     <PackageReference Include="Microsoft.Bot.Configuration" Version="4.8.1" />
     <PackageReference Include="Microsoft.Bot.Schema" Version="4.8.1" />
     <PackageReference Include="Microsoft.Recognizers.Text" Version="1.2.9" />
