--- a/skills/csharp/todoskill/appsettings.json
+++ b/skills/csharp/todoskill/appsettings.json
@@ -8,6 +8,10 @@
       "provider": "Azure Active Directory v2"
     }
   ],
+  "oauthCredentials": {
+    "microsoftAppId": "",
+    "microsoftAppPassword": ""
+  },
   "ApplicationInsights": {
     "InstrumentationKey": ""
   },
