--- a/skills/csharp/experimental/weatherskill/appsettings.json
+++ b/skills/csharp/experimental/weatherskill/appsettings.json
@@ -7,6 +7,8 @@
   ],
   "microsoftAppId": "",
   "microsoftAppPassword": "",
+  "properties": {},
+  "allowedCallers": [ "*" ],
   "ApplicationInsights": {
     "InstrumentationKey": ""
   },
