--- a/skills/csharp/experimental/restaurantbookingskill/appsettings.json
+++ b/skills/csharp/experimental/restaurantbookingskill/appsettings.json
@@ -1,6 +1,8 @@
 {
   "microsoftAppId": "",
   "microsoftAppPassword": "",
+  "properties": {},
+  "allowedCallers": [ "*" ],
   "oauthConnections": [],
   "ApplicationInsights": {
     "InstrumentationKey": ""
