--- a/skills/csharp/todoskill/appsettings.json
+++ b/skills/csharp/todoskill/appsettings.json
@@ -1,6 +1,8 @@
 {
   "microsoftAppId": "",
   "microsoftAppPassword": "",
+  "properties": {},
+  "allowedCallers": [ "*" ],
   "botWebAppName": "",
   "oauthConnections": [
     {
