Initial work for enabling Teams Task Module

--- a/skills/csharp/experimental/itsmskill/ITSMSkill.csproj
+++ b/skills/csharp/experimental/itsmskill/ITSMSkill.csproj
@@ -30,11 +30,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-  </ItemGroup>
-  <ItemGroup>
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Compile Update="Responses\Shared\SharedStrings.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -105,5 +102,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Dialogs\Teams\CreateTicketTaskModule\" />
   </ItemGroup>
 </Project>
