--- a/skills/csharp/calendarskill/appsettings.json
+++ b/skills/csharp/calendarskill/appsettings.json
@@ -9,6 +9,10 @@
       "provider": "Azure Active Directory v2"
     }
   ],
+  "oauthCredentials": {
+    "microsoftAppId": "",
+    "microsoftAppPassword": ""
+  },
   "ApplicationInsights": {
     "InstrumentationKey": ""
   },
