[ITSM][Phone] add oauthCredentials

--- a/skills/csharp/experimental/itsmskill/appsettings.json
+++ b/skills/csharp/experimental/itsmskill/appsettings.json
@@ -8,6 +8,10 @@
       "name": "ServiceNow"
     }
   ],
+  "oauthCredentials": {
+    "microsoftAppId": "",
+    "microsoftAppPassword": ""
+  },
   "skillAuthenticationWhitelist": [],
   "ApplicationInsights": {
     "InstrumentationKey": ""
