--- a/skills/csharp/experimental/phoneskill/appsettings.json
+++ b/skills/csharp/experimental/phoneskill/appsettings.json
@@ -5,6 +5,10 @@
       "provider": "Azure Active Directory v2"
     }
   ],
+  "oauthCredentials": {
+    "microsoftAppId": "",
+    "microsoftAppPassword": ""
+  },
   "properties": {
     "googleAppName": "",
     "googleClientId": "",
