[Weather/Restaurant Booking/ToDo] Align to skill template (#151)
* weather align

* res booking align

* todo align

* fix comments

--- a/skills/csharp/todoskill/appsettings.json
+++ b/skills/csharp/todoskill/appsettings.json
@@ -1,6 +1,8 @@
 {
   "microsoftAppId": "",
   "microsoftAppPassword": "",
+  "properties": {},
+  "allowedCallers": [ "*" ],
   "botWebAppName": "",
   "oauthConnections": [
     {
@@ -18,10 +20,6 @@
   "blobStorage": {
     "connectionString": "",
     "container": "transcripts"
-  },
-  "luis": {
-    "accountName": "",
-    "key": ""
   },
   "cosmosDb": {
     "containerId": "botstate-collection",
