--- a/skills/csharp/tests/musicskill.Tests/MusicSkill.Tests.csproj
+++ b/skills/csharp/tests/musicskill.Tests/MusicSkill.Tests.csproj
@@ -29,9 +29,14 @@
       <DependentUpon>GeneralUtterances.resx</DependentUpon>
     </Compile>
     <Compile Update="Utterances\PlayMusicDialogUtterances.Designer.cs">
+      <DependentUpon>PlayMusicDialogUtterances.resx</DependentUpon>
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>PlayMusicDialogUtterances.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Utterances\ControlSettingsUtterances.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ControlSettingsUtterances.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 
@@ -39,6 +44,10 @@
     <EmbeddedResource Update="Utterances\GeneralUtterances.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>GeneralUtterances.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Utterances\ControlSettingsUtterances.resx">
+      <LastGenOutput>ControlSettingsUtterances.Designer.cs</LastGenOutput>
+      <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Utterances\PlayMusicDialogUtterances.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
