Fix UT and add TeamsUpdateAcitivity class

--- a/skills/csharp/experimental/itsmskill/appsettings.json
+++ b/skills/csharp/experimental/itsmskill/appsettings.json
@@ -24,5 +24,6 @@
   },
   "serviceNowUrl": "https://instance.service-now.com",
   "serviceNowGetUserId": "namespace/get_user_id",
-  "limitSize": 5
+  "limitSize": 5,
+  "TeamsTrustedUrl": "https://smba.trafficmanager.net/amer/"
 }
