--- a/skills/declarative/calendarskill/settings/appsettings.json
+++ b/skills/declarative/calendarskill/settings/appsettings.json
@@ -1,6 +1,7 @@
 {
   "MicrosoftAppId": "",
   "ConnectionName": "",
+  "DisplaySize": 3,
   "luis": {
     "name": "CalendarSkill",
     "authoringRegion": "westus",
