[DToDo] use GetInput*, add delete test

--- a/skills/declarative/todoskill/settings/appsettings.json
+++ b/skills/declarative/todoskill/settings/appsettings.json
@@ -15,5 +15,12 @@
   "intentScore": 0.6,
   "connectionName": "",
   "graphBaseUrl": "https://graph.microsoft.com/beta/me/outlook/",
-  "displaySize": 2
+  "displaySize": 2,
+  "downsampling": {
+    "maxImbalanceRatio": 1000,
+    "maxUtteranceAllowed": 15000
+  },
+  "runtime": {
+    "customRuntime": false
+  }
 }
