support next meeting and ask parameter

--- a/skills/declarative/calendarskill/settings/appsettings.json
+++ b/skills/declarative/calendarskill/settings/appsettings.json
@@ -17,5 +17,9 @@
     "searchServiceName": "",
     "searchServiceAdminApiKey": "",
     "searchIndexName": ""
+  },
+  "downsampling": {
+    "maxImbalanceRatio": 10,
+    "maxUtteranceAllowed": 15000
   }
 }
