[DToDo] add delete all tests

--- a/skills/declarative/todoskill/settings/appsettings.json
+++ b/skills/declarative/todoskill/settings/appsettings.json
@@ -11,6 +11,7 @@
     "endpointkey": "",
     "hostname": ""
   },
+  "skillHostEndpoint": "http://localhost:3979/api/skills",
   "interruptScore": 0.9,
   "intentScore": 0.6,
   "connectionName": "",
