add time remaining flow

--- a/skills/declarative/calendarskill/settings/appsettings.json
+++ b/skills/declarative/calendarskill/settings/appsettings.json
@@ -21,5 +21,10 @@
   "downsampling": {
     "maxImbalanceRatio": 10,
     "maxUtteranceAllowed": 15000
+  },
+  "runtime": {
+    "customRuntime": false,
+    "path": "",
+    "command": ""
   }
 }
