add bot path for runtime setting

--- a/skills/declarative/whoskill/runtime/azurewebapp/appsettings.json
+++ b/skills/declarative/whoskill/runtime/azurewebapp/appsettings.json
@@ -7,7 +7,7 @@
   },
   "MicrosoftAppId": "",
   "PageSize": 2,
-  "ConnectionName": "msGraph",
+  "ConnectionName": "",
   "luis": {
     "name": "WhoSkill",
     "authoringRegion": "westus",
@@ -31,8 +31,8 @@
     "maxUtteranceAllowed": 15000
   },
   "MicrosoftAppPassword": "",
-  "Bot": "",
-  "root": "",
+  "bot": "../../",
+  "root": "../../generated",
   "cosmosDb": {
     "authKey": "",
     "collectionId": "botstate-collection",
