fixes for ExpandTemplate

--- a/skills/csharp/experimental/phoneskill/PhoneSkill.csproj
+++ b/skills/csharp/experimental/phoneskill/PhoneSkill.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <NoWarn>NU1701</NoWarn>
-    <Platforms>AnyCPU;x86;x64</Platforms>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
