--- a/skills/declarative/calendarskill_build2020/runtime/azurefunctions/Microsoft.BotFramework.Composer.Functions.csproj
+++ b/skills/declarative/calendarskill_build2020/runtime/azurefunctions/Microsoft.BotFramework.Composer.Functions.csproj
@@ -13,23 +13,25 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
-    <PackageReference Include="Microsoft.Bot.Builder" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.AI.QnA" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.ApplicationInsights" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Azure" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Declarative" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.ApplicationInsights.Core" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Connector" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.4" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.4" />
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.7" />
+    <PackageReference Include="Microsoft.Bot.Builder" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.AI.QnA" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.ApplicationInsights" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Azure" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Debugging" Version="4.9.1-preview" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Declarative" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.ApplicationInsights.Core" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Connector" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.3" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\extensions\Microsoft.Bot.Solutions.Extensions\Microsoft.Bot.Solutions.Extensions.csproj" />
+    <ProjectReference Include="..\..\..\extensions\Microsoft.Bot.Solutions.Extensions\Microsoft.Bot.Solutions.Extensions\Microsoft.Bot.Solutions.Extensions.csproj" />
     <ProjectReference Include="..\core\Microsoft.BotFramework.Composer.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
@@ -45,18 +47,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="ComposerDialogs\language-generation\en-us\common.en-us.lg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="ComposerDialogs\language-generation\en-us\echobot_0.en-us.lg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="ComposerDialogs\language-understanding\en-us\echobot-0.en-us.lu">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="ComposerDialogs\Main.dialog">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="ComposerDialogs\settings\appsettings.json">
