--- a/skills/declarative/calendarskill_build2020/runtime/azurewebapp/Microsoft.BotFramework.Composer.WebApp.csproj
+++ b/skills/declarative/calendarskill_build2020/runtime/azurewebapp/Microsoft.BotFramework.Composer.WebApp.csproj
@@ -1,8 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UserSecretsId>7507d09d-5a07-45e2-8861-6d536c645ff5</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <None Include="ComposerDialogs\**">
@@ -16,26 +15,27 @@
     <CodeAnalysisRuleSet>..\core\Microsoft.BotFramework.Composer.Core.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4" />
-    <PackageReference Include="Microsoft.Bot.Builder" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.AI.QnA" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.ApplicationInsights" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Azure" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Declarative" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.ApplicationInsights.Core" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.9.0" />
-    <PackageReference Include="Microsoft.Bot.Connector" Version="4.9.0" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Bot.Builder" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.AI.QnA" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.ApplicationInsights" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Azure" Version="4.9.1" />
+	<PackageReference Include="Microsoft.Bot.Builder.Dialogs.Declarative" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Debugging" Version="4.9.1-preview" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.ApplicationInsights.Core" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Bot.Connector" Version="4.9.1" />
+    <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.66">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\extensions\Microsoft.Bot.Solutions.Extensions\Microsoft.Bot.Solutions.Extensions.csproj" />
+    <ProjectReference Include="..\..\..\extensions\Microsoft.Bot.Solutions.Extensions\Microsoft.Bot.Solutions.Extensions\Microsoft.Bot.Solutions.Extensions.csproj" />
     <ProjectReference Include="..\core\Microsoft.BotFramework.Composer.Core.csproj" />
   </ItemGroup>
 </Project>
