--- a/skills/declarative/calendarskill_build2020/runtime/azurefunctions/Microsoft.BotFramework.Composer.Functions.csproj
+++ b/skills/declarative/calendarskill_build2020/runtime/azurefunctions/Microsoft.BotFramework.Composer.Functions.csproj
@@ -31,7 +31,7 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\extensions\Microsoft.Bot.Solutions.Extensions\Microsoft.Bot.Solutions.Extensions\Microsoft.Bot.Solutions.Extensions.csproj" />
+    <ProjectReference Include="..\..\..\extensions\Microsoft.Bot.Solutions.Extensions\Microsoft.Bot.Solutions.Extensions.csproj" />
     <ProjectReference Include="..\core\Microsoft.BotFramework.Composer.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
