--- a/skills/declarative/calendarskill_build2020/runtime/azurewebapp/Microsoft.BotFramework.Composer.WebApp.csproj
+++ b/skills/declarative/calendarskill_build2020/runtime/azurewebapp/Microsoft.BotFramework.Composer.WebApp.csproj
@@ -35,7 +35,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\extensions\Microsoft.Bot.Solutions.Extensions\Microsoft.Bot.Solutions.Extensions\Microsoft.Bot.Solutions.Extensions.csproj" />
+    <ProjectReference Include="..\..\..\extensions\Microsoft.Bot.Solutions.Extensions\Microsoft.Bot.Solutions.Extensions.csproj" />
     <ProjectReference Include="..\core\Microsoft.BotFramework.Composer.Core.csproj" />
   </ItemGroup>
 </Project>
