add ManageNotification action & related

--- a/skills/hackathon/GithubReportAssistant/settings/appsettings.json
+++ b/skills/hackathon/GithubReportAssistant/settings/appsettings.json
@@ -30,9 +30,9 @@
     "logActivities": true
   },
   "runtime": {
-    "customRuntime": false,
-    "path": "",
-    "command": ""
+    "customRuntime": true,
+    "path": "skills\\hackathon\\GithubReportAssistant\\runtime",
+    "command": "dotnet run --project azurewebapp"
   },
   "downsampling": {
     "maxImbalanceRatio": 10,
