Fix app setting

--- a/skills/hackathon/GithubReportAssistant/settings/appsettings.json
+++ b/skills/hackathon/GithubReportAssistant/settings/appsettings.json
@@ -3,9 +3,9 @@
     "UseShowTypingMiddleware": false,
     "UseInspectionMiddleware": false
   },
-  "microsoftAppId": "6e2d2c9e-9951-40c7-885f-06737b814363",
-  "connectionName": "Outlook",
-  "microsoftAppPassword": "zol6.qCY9tVS-X27N1f.~impYLFTG0.3.i",
+  "microsoftAppId": "",
+  "connectionName": "",
+  "microsoftAppPassword": "",
   "luis": {
     "name": "VirtualAssistant",
     "authoringRegion": "westus",
