--- a/skills/declarative/extensions/Microsoft.Bot.Solutions.Extensions/Microsoft.Bot.Solutions.Extensions.csproj
+++ b/skills/declarative/extensions/Microsoft.Bot.Solutions.Extensions/Microsoft.Bot.Solutions.Extensions.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.9.1" />
     <PackageReference Include="Microsoft.Graph" Version="3.6.0" />
+    <PackageReference Include="Microsoft.Azure.Search" Version="10.0.1" />
   </ItemGroup>
   
 </Project>
