--- a/skills/declarative/extensions/Microsoft.Bot.Solutions.Extensions/Microsoft.Bot.Solutions.Extensions.csproj
+++ b/skills/declarative/extensions/Microsoft.Bot.Solutions.Extensions/Microsoft.Bot.Solutions.Extensions.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.9.1" />
+    <PackageReference Include="Microsoft.Recognizers.Text.DataTypes.TimexExpression" Version="1.3.2" />
     <PackageReference Include="Microsoft.Graph" Version="3.6.0" />
   </ItemGroup>
   
