User/sidmore/itsm skill activity reference map (#158)
* Implement ServiceNow Controller

* Change To Key in ProactiveModel

* Fix PR comments

* Initial work for enabling Teams Task Module

* Fix Servicenow failing Test

* Fix PR comments

* Implement CreateTicketTaskModule UT

* Implement ActivityReferenceMap for updating activities

* Implementation for updating TeamsActivity

* Fix UT and add TeamsUpdateAcitivity class

* Fix some of the PR comments

* Fix PR comments

* Delete Ticket TaskModule

* delete ticket taskmodule implementation

* Fix PR issues

* Implement UT's for Update Delete Ticket Teams TaskModule

* Update readme.md

--- a/skills/csharp/experimental/itsmskill/appsettings.json
+++ b/skills/csharp/experimental/itsmskill/appsettings.json
@@ -30,4 +30,5 @@
   "serviceNowGetUserId": "namespace/get_user_id",
   "limitSize": 5,
   "fallbackToKnowledge": false
+  "TeamsTrustedUrl": "https://smba.trafficmanager.net/amer/"
 }
