--- a/skills/csharp/experimental/itsmskill/appsettings.json
+++ b/skills/csharp/experimental/itsmskill/appsettings.json
@@ -29,6 +29,6 @@
   "serviceNowUrl": "https://instance.service-now.com",
   "serviceNowGetUserId": "namespace/get_user_id",
   "limitSize": 5,
-  "fallbackToKnowledge": false
+  "fallbackToKnowledge": false,
   "TeamsTrustedUrl": "https://smba.trafficmanager.net/amer/"
 }
