[ITSM] Subscription Manager for mapping ServiceNow Filters to Conversation Id (#190)
* Implement ServiceNow Controller

* Change To Key in ProactiveModel

* Fix PR comments

* Initial work for enabling Teams Task Module

* Fix Servicenow failing Test

* Fix PR comments

* Implement CreateTicketTaskModule UT

* Implement ActivityReferenceMap for updating activities

* Implementation for updating TeamsActivity

* Fix UT and add TeamsUpdateAcitivity class

* Fix some of the PR comments

* Fix PR comments

* Delete Ticket TaskModule

* delete ticket taskmodule implementation

* Fix PR issues

* Initial set of classes for mapping ConversationId to ServiceNow

* Create Business Rule in ServiceNow

* Add comments to create Business rule

* Implement UT's for Update Delete Ticket Teams TaskModule

* Implement Interface

* Use SkillId for identifying skill in taskModules

* Incident Subscription changes

* Add Subscription Filter TaskModule for ServiceNow

* Implement ConversationReference Mapper to ServiceNowBusiness Rule

* Use Scripted RestAPI to create business rule and restmessages

* Proactive SubscriptionMap

* Add CallBackURL to endPt and append BusinessRule name to execute script

* Markdown for Creating BusinessRules and RestMessage

* Add missing Copyright and summary to classes

* Fix ITSMSkill TaskModule Test

--- a/skills/csharp/experimental/itsmskill/appsettings.json
+++ b/skills/csharp/experimental/itsmskill/appsettings.json
@@ -28,6 +28,7 @@
   },
   "serviceNowUrl": "https://instance.service-now.com",
   "serviceNowGetUserId": "namespace/get_user_id",
+  "serviceNowNamespaceId":  "namespace_id",
   "limitSize": 5,
   "fallbackToKnowledge": false,
   "TeamsTrustedUrl": "https://smba.trafficmanager.net/amer/"
