--- a/skills/csharp/experimental/itsmskill/ITSMSkill.csproj
+++ b/skills/csharp/experimental/itsmskill/ITSMSkill.csproj
@@ -4,6 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <NoWarn>NU1701</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Services\ServiceNow\BusinessRuleM\**" />
+    <Content Remove="Services\ServiceNow\BusinessRuleM\**" />
+    <EmbeddedResource Remove="Services\ServiceNow\BusinessRuleM\**" />
+    <None Remove="Services\ServiceNow\BusinessRuleM\**" />
+  </ItemGroup>
   <ItemGroup>
     <Content Remove="Responses\Ticket\CreateTicketResponses.json" />
   </ItemGroup>
