--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -9,6 +9,7 @@ reviewers:
   - lauren-mills
   - bobokids
   - kaymkm
+  - xhr0804
   
 # A number of reviewers added to the pull request
 # Set 0 to add all the reviewers (default: 0)
