started create dialog refactor

--- a/skills/declarative/calendarSkill/settings/appsettings.json
+++ b/skills/declarative/calendarSkill/settings/appsettings.json
@@ -58,5 +58,11 @@
   ],
   "defaultValue": {
     "duration": 30
+  },
+  "skillConfiguration": {
+    "isSkill": false,
+    "allowedCallers": [
+      "*"
+    ]
   }
 }
