--- a/skills/declarative/calendarSkill/settings/cross-train.config.json
+++ b/skills/declarative/calendarSkill/settings/cross-train.config.json
@@ -70,7 +70,8 @@
       "UpdateEvent": [
         "ResolveDateTimeDialog.en-us",
         "UpdateEventDialog.en-us"
-      ]
+      ],
+      "LaunchBot": []
     }
   },
   "CreateEventDialog.en-us": {
