add sample js component

--- a/experimental/feeds/components.json
+++ b/experimental/feeds/components.json
@@ -11,6 +11,17 @@
     "description": "Dialogs to provide general intent handling - like help and cancel"
   },
   {
+    "name": "preview-bot-component-generalintent",
+    "version": "0.0.1-preview1",
+    "source": "npm",
+    "language": "js",
+    "category": "Conversational Core",
+    "authors": [
+      "Bot Framework"
+    ],
+    "description": "Dialogs to provide general intent handling - like help and cancel"
+  },
+  {
     "name": "Preview.Bot.Component.GreetingDialog",
     "version": "0.0.1-preview1",
     "source": "nuget",
