--- a/experimental/generator-dotnet-yeoman/generators/app/templates/assets/appsettings.json
+++ b/experimental/generator-dotnet-yeoman/generators/app/templates/assets/appsettings.json
@@ -1,5 +1,8 @@
 {
   "MicrosoftAppPassword": "",
   "MicrosoftAppId": "",
-  "defaultRootDialog": "echo.dialog"
+  "defaultRootDialog": "",
+  "applicationInsights": {
+    "InstrumentationKey": ""
+  }
 }
