add package.json files for each component update nuspec to match descriptions from the composer feed

--- a/experimental/components/General/GeneralIntent.nuspec
+++ b/experimental/components/General/GeneralIntent.nuspec
@@ -7,7 +7,7 @@
         <owners>Microsoft</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <releaseNotes>first version of general intent package</releaseNotes>
-        <description>this package contains dialogs to provide general intent handling</description>
+        <description>Dialogs to provide general intent handling - like help and cancel</description>
         <tags>conversationalcore generalintent preview</tags>
         <dependencies />
     </metadata>
