--- a/experimental/components/Greeting/Greeting.nuspec
+++ b/experimental/components/Greeting/Greeting.nuspec
@@ -7,7 +7,7 @@
         <owners>Microsoft</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <releaseNotes>first version of greeting dialog package</releaseNotes>
-        <description>this package contains dialogs to provide greeting experience</description>
+        <description>Dialogs to provide a greeting experience</description>
         <tags>conversationalcore greeting preview</tags>
         <dependencies />
     </metadata>
