--- a/experimental/components/UnknownIntent/UnknownIntent.nuspec
+++ b/experimental/components/UnknownIntent/UnknownIntent.nuspec
@@ -7,7 +7,7 @@
         <owners>Microsoft</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <releaseNotes>first version of unknown intent dialog package</releaseNotes>
-        <description>this package contains dialogs to provide unknown intent experience</description>
+        <description>Dialogs to provide a fallback experience</description>
         <tags>conversationalcore unknownintent preview</tags>
         <dependencies />
     </metadata>
