fix: update experimental components with bug fixes (#453)
* Introduce a feed controlling which components to display in Composer.
This will be consumed by the Composer package manager UI.

* update onboarding dialog -
fix prompt LU to use prebuilt personName
fix interruption behavior
fix always prompt

* add package.json files for each component
update nuspec to match descriptions from the composer feed

* remove old feed

* clarify canceled confirmation

* remove "you can ask me" from onboarding

* always use username if available
remove duplicate text in returning user card

* add some in place help

* add some more explanation in the LG templates
remove some unused lg

* fix names of packages to match c#

* update the feeds with js components

* bump dotnet package versions in nuspec files and feed

--- a/experimental/components/UnknownIntent/UnknownIntent.nuspec
+++ b/experimental/components/UnknownIntent/UnknownIntent.nuspec
@@ -2,12 +2,12 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Preview.Bot.Component.UnknownIntentDialog</id>
-        <version>0.0.1-preview3</version>
+        <version>0.0.1-preview4</version>
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <releaseNotes>first version of unknown intent dialog package</releaseNotes>
-        <description>this package contains dialogs to provide unknown intent experience</description>
+        <description>Dialogs to provide a fallback experience</description>
         <tags>conversationalcore unknownintent preview</tags>
         <dependencies />
     </metadata>
