--- a/experimental/components/Greeting/Greeting.nuspec
+++ b/experimental/components/Greeting/Greeting.nuspec
@@ -2,12 +2,12 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Preview.Bot.Component.GreetingDialog</id>
-        <version>0.0.1-preview2</version>
+        <version>0.0.1-preview3</version>
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <releaseNotes>first version of greeting dialog package</releaseNotes>
-        <description>this package contains dialogs to provide greeting experience</description>
+        <description>Dialogs to provide a greeting experience</description>
         <tags>conversationalcore greeting preview</tags>
         <dependencies />
     </metadata>
